# chatscroll

./: .gitignore  README.md  app.py  llm_config.yaml  pyproject.toml  sample_chat.txt
chatscroll/: chat_parser.py  parser.py  plots.py  prompts.py  rag.py  stats.py
config/: loader.py
tests/: conftest.py  test_app.py  test_parser.py  test_rag.py
views/: __init__.py  activity.py  ask.py  chat2chat.py  content.py  overview.py  search.py  user.py
