[project]
name = "chatscroll"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramón Carreño",email = "ramcv98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "emoji (>=2.14.1,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "dateparser (>=1.2.2,<2.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
